Fixed the grid-gap

--- a/Portfolio/src/styles/card.scss
+++ b/Portfolio/src/styles/card.scss
@@ -8,6 +8,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  border-radius: 3.7px;
 
   &:hover {
     background-color: rgba(73, 73, 73, 0.7);
