--- a/Portfolio/src/styles/work.scss
+++ b/Portfolio/src/styles/work.scss
@@ -26,7 +26,7 @@
     }
     @include media(">=desktop") {
       grid-template-columns: 1fr 1fr 1fr;
-      grid-gap: 5em;
+      grid-gap: 3em;
     }
   }
 }
